Working on PDF Viewer capabilities